--- a/css/_product.css
+++ b/css/_product.css
@@ -20,8 +20,15 @@ li.breadcrumb-item.active {
 	font-size: 0.6rem;
 	border-radius: 25px !important;
 	border-color: 1px solid var(--nav-colour) !important;
-	margin-right: 0.5rem;
+	margin: 1em 0.5em 1em 0;
+}
+.title-button-line-wrap h1 {
+	margin-top: 0;
+	margin-bottom: 0;
 }
 .title-button-line-wrap {
-	marging: 0 auto 2rem;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	margin-bottom: 1em;
 }
