--- a/css/_product.css
+++ b/css/_product.css
@@ -70,3 +70,38 @@ li.breadcrumb-item.active {
 .col-md p {
 	font-size: 0.9rem;
 }
+
+.list-group-item {
+	border-bottom: none;
+}
+
+.list-group-item i {
+	font-size: 1.2rem;
+	padding-right: 1.2rem;
+}
+
+.col-list ul li {
+	background-color: rgb(233, 236, 239, 0);
+	padding: 0.5rem 0;
+}
+
+@media (min-width: 680px) {
+	.row {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: center;
+		padding: 2rem 1rem;
+		margin: 0 auto;
+	}
+
+	.col-list ul {
+		margin-left: 2rem;
+	}
+	.row.col-md {
+		padding: 0;
+	}
+	.row.col-md.col-list {
+		padding: 0;
+	}
+}
